download CV function implemented

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ The 'fa-brands' class selects the icon category, and 'fa-[platform]' loads a spe
         <a href="#"><i class="fa-brands fa-linkedin"></i></a>
         <a href="#"><i class="fa-brands fa-github"></i></a>
     </div>
-    <a href="#" class="btn">Download my CV</a>
+    <a href="docs/Franco Castro Chaves CV.pdf" class="btn">Download my CV</a>
     </div>
 </div>
 </section>
