fixing guitar image

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ The 'fa-brands' class selects the icon category, and 'fa-[platform]' loads a spe
 
   <!-- Guitarra -->
   <div class="about-row image-right">
-    <img src="images/guitar.jpeg" alt="Yo tocando guitarra">
+    <img src="images/EAGuitar.jpeg" alt="Yo tocando guitarra">
     <div class="about-content">
       <h2>This is the School of <span>Electrical Engineering!</span></h2>
       <p>I'm an active student in the school of electrical engineering</p>
