Change text from about me section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@ This allows CSS to apply custom styles to this specific element, such as font si
       <div class="dropdown-content">
         <a href="#biomedical">Biomedical</a>
         <a href="#robot">Robot</a>
-        <a href="#automation">Automation</a>
       </div>
     </div>
   </nav>
@@ -72,18 +71,19 @@ Here, it wraps the profile image and applies the 'home-img' class for styling.--
 
 <!-- <p> defines a paragraph of text. It is used here to describe your professional profile and interests.-->
 
-  <p> I am passionate about working on technological projects that integrate engineering, biomedical science, and
-    programming to create impactful solutions. I am always eager to learn and improve my skills, adapting to new
-    challenges with creativity and resilience. Currently, I am seeking an opportunity to enter the job market where I
-    can contribute my knowledge and experience while continuing to grow professionally</p>
+  <p>
+    I’m deeply passionate about mathematics, art, music—and especially technology. What I enjoy most is working on projects that allow me to learn while building meaningful connections with others. That’s why I’m excited about the opportunity to join HPE’s Technical Training Development Internship. I love turning complex topics into clear, engaging content, and I’m eager to contribute through creativity, collaboration, and a strong passion for teaching.
+  </p>
+  
+  
 
     <div class="social-icons">
 
 <!-- Each <i> tag loads a brand icon from Font Awesome. 
 The 'fa-brands' class selects the icon category, and 'fa-[platform]' loads a specific logo.-->
 
-        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="#"><i class="fa-brands fa-github"></i></a>
+        <a href="https://linkedin.com/in/franco-castro-chaves"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://github.com/DarthFranco2001"><i class="fa-brands fa-github"></i></a>
     </div>
     <a href="docs/Franco Castro Chaves CV.pdf" class="btn">Download my CV</a>
     </div>
@@ -99,7 +99,10 @@ The 'fa-brands' class selects the icon category, and 'fa-[platform]' loads a spe
     <img src="images/ElectricalEngineeringSchool.jpeg" alt="Escuela de Ingeniería Eléctrica">
     <div class="about-content">
       <h2>This is the School of <span>Electrical Engineering!</span></h2>
-      <p>I'm an active student in the school of electrical engineering</p>
+      <p>
+        The School of Electrical Engineering has been the place where I’ve grown both personally and professionally. It’s where I’ve spent countless hours learning, exploring, and building meaningful friendships. Throughout this journey, I’ve developed a strong foundation in programming, electronics, and systems thinking—skills that have not only shaped my identity as an engineer but also revealed my passion for blending technical knowledge with creativity and collaboration.
+      </p>
+      
     </div>
   </div>
 
@@ -107,8 +110,8 @@ The 'fa-brands' class selects the icon category, and 'fa-[platform]' loads a spe
   <div class="about-row image-right">
     <img src="images/Lacomet.jpg" alt="Laboratorio LACOMET">
     <div class="about-content">
-      <h2>This is the School of <span>Electrical Engineering!</span></h2>
-      <p>He participado en laboratorios desde el 2022, ya que siempre me ha gustado participar en proyectos y actividades fuera de los cursos universitarios.</p>
+      <h2>I Love <span>Science</span> — And Every Great Scientist <span>Does Research!</span></h2>
+      <p>Since the return to in-person classes in 2022, I have been actively involved in research laboratories at the university. As a dedicated science enthusiast, I never wanted to limit myself to theory alone. Instead, I embraced the opportunity to expand my knowledge by applying it in practice—conducting hands-on research, experimenting with instrumentation, and collaborating with fellow researchers. These experiences have not only allowed me to solve real-world challenges but have also fueled my continuous passion for discovery and innovation. </p>
     </div>
   </div>
 
@@ -116,8 +119,11 @@ The 'fa-brands' class selects the icon category, and 'fa-[platform]' loads a spe
   <div class="about-row image-left">
     <img src="images/Rice.jpeg" alt="Universidad Rice">
     <div class="about-content">
-      <h2>This is the School of <span>Electrical Engineering!</span></h2>
-      <p>I'm an active student in the school of electrical engineering</p>
+      <h2>An International Learning Experience with <span>Rice University</span></h2>
+      <p>
+        In 2023, thanks to my contributions to a biomedical engineering research lab, I was selected to participate in two international bootcamps in collaboration with Rice University. These intensive programs focused on real-world problem solving and challenged me to think creatively, work under pressure, and collaborate across cultures. Beyond the technical skills I gained, these experiences expanded my perspective on innovation and reaffirmed my passion for using engineering to make a meaningful impact.
+      </p>
+      
     </div>
   </div>
 
@@ -125,8 +131,8 @@ The 'fa-brands' class selects the icon category, and 'fa-[platform]' loads a spe
   <div class="about-row image-right">
     <img src="images/EAGuitar.jpg" alt="Yo tocando guitarra">
     <div class="about-content">
-      <h2>This is the School of <span>Electrical Engineering!</span></h2>
-      <p>I'm an active student in the school of electrical engineering</p>
+      <h2>Combining <span>Art</span> and <span> Technology</span>!</span></h2>
+      <p>Engineering is also a form of art! As an artist, one of my most fulfilling experiences has been merging creativity with technology through hands-on projects. During Electrizarte, a lab designed for this purpose, I developed a prototype that captures the frequency and energy of a guitar and transforms it into real-time visual art. I’ve showcased this in live performances and used it as a tool to inspire children to explore science from a more creative and engaging perspective.</p>
     </div>
   </div>
 
@@ -134,8 +140,8 @@ The 'fa-brands' class selects the icon category, and 'fa-[platform]' loads a spe
   <div class="about-row image-left">
     <img src="images/accionSocial.jpg" alt="Acción social">
     <div class="about-content">
-      <h2>This is the School of <span>Electrical Engineering!</span></h2>
-      <p>I'm an active student in the school of electrical engineering</p>
+      <h2>Engineering with <span>Purpose</span></h2>
+      <p>  A professor once told us that as electrical engineers, there would never be a lack of food on our table—and for that reason, we should always find time to give back. Since then, volunteer work and community outreach have become essential parts of my journey. These experiences have made me more human, more mature, and more aware of the world around me. I’ve led social impact projects focused on recycling and sustainability, and I’ve had the privilege of inspiring elementary school children to explore STEM careers by sharing engineering concepts in a fun and engaging way.g</p>
     </div>
   </div>
 </section>
