change the text from the skills section

--- a/index.html
+++ b/index.html
@@ -154,32 +154,37 @@ The 'fa-brands' class selects the icon category, and 'fa-[platform]' loads a spe
     <div class="skill-box">
       <i class="fas fa-paint-brush"></i>
       <h3>Creativity</h3>
-      <p>I enjoy blending art and technology to create unique, meaningful solutions.</p>
+      <p>
+        To me, creativity isn’t limited to the arts—it’s the foundation of originality and innovation. In engineering, it’s what allows us to think differently, connect ideas, and find new ways to solve problems. After all, “ingenio” is at the heart of engineering.
+      </p>
     </div>
 
     <div class="skill-box">
       <i class="fas fa-brain"></i>
       <h3>Problem Solving</h3>
-      <p>I’m passionate about finding elegant solutions to complex challenges.</p>
+      <p>I see every problem like a puzzle. I may not know the answer right away, but I enjoy the process of figuring it out step by step—especially when I get to learn something new in the process.</p>
     </div>
 
     <div class="skill-box">
       <i class="fas fa-robot"></i>
       <h3>Technical Skills</h3>
-      <p>I have hands-on experience with engineering tools and programming languages.</p>
+      <p>
+        The School of Electrical Engineering has done an excellent job grounding me in both hardware and software. Thanks to this foundation, I feel confident moving between electronics, programming, and systems design—bridging the gap between theory and practical implementation.
+      </p>
     </div>
 
     <div class="skill-box">
       <i class="fas fa-file-alt"></i>
       <h3>Documentation</h3>
-      <p>I can structure and write professional technical documentation.</p>
+      <p> Writing is also a form of art! Depending on the audience, a document should be written in very different ways. That’s why I always try to balance technical precision, clarity of ideas, and logical flow—while also making sure the result is visually appealing. To me, good documentation is about making complex ideas accessible, structured, and even enjoyable to read.</p>
     </div>
   </div>
 
   <p class="ieee-description">
-    I have extensive experience writing technical and formal documents in the IEEE style.
-    I am skilled in structuring research papers, producing clear scientific explanations,
-    and generating professional-quality figures using MATLAB and LaTeX.
+    <p class="ieee-description">
+      Every great document should be accompanied by clear, visually appealing figures. Throughout my academic journey, I’ve discovered two tools that I feel especially comfortable with: MATLAB for generating scientific graphs and LaTeX with the TikZ library for creating detailed illustrations. That said, I’m always open to learning new tools that help communicate ideas more effectively.
+    </p>
+    
   </p>
 
   <div class="tech-examples">
@@ -187,14 +192,16 @@ The 'fa-brands' class selects the icon category, and 'fa-[platform]' loads a spe
     <div class="tech-box">
       <img src="images/matlab-svgrepo-com.svg" alt="MATLAB logo" class="tech-logo">
       <img src="images/specificAbsorptionCoefficients.svg" alt="MATLAB example" class="tech-example">
-      <p class="tech-caption">Scientific figure generated in MATLAB</p>
+      <p class="tech-caption">This figure shows how different chromophores absorb light across various wavelengths—a central aspect of my research on cancer detection through light-based imaging. Generated with MATLAB.
+      </p>
     </div>
   
     <!-- LaTeX example -->
     <div class="tech-box">
       <img src="images/LaTeX_logo.svg" alt="LaTeX logo" class="tech-logo">
       <img src="images/Tikz.png" alt="LaTeX example" class="tech-example">
-      <p class="tech-caption">Diagram created with LaTeX and TikZ</p>
+      <p class="tech-caption">TikZ diagram illustrating a simple example used in my 3Rs project: every object—like a pen—generates waste after serving its purpose, reinforcing the idea that sustainability starts with awareness.
+      </p>
     </div>
   </div>
 </section>
