--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@ The 'fa-brands' class selects the icon category, and 'fa-[platform]' loads a spe
 </section>
 
 <section id="biomedical" class="biomedical-project">
+  <h2 class="section-title">Biomedical Project: <span>Gold, Lasers, and Cancer Detection</span></h2>
   <h2 class="section-title">A little bit of context</h2>
   <div class="biomedical-columns-2">
     <div class="biomedical-box">
@@ -332,6 +333,8 @@ The 'fa-brands' class selects the icon category, and 'fa-[platform]' loads a spe
         community, without delving too deeply into the technical details. I hope you enjoyed this journey and learned
         something new!
       </p>
+      <a href="docs/Castro_Dumani.pdf" target="_blank" class="btn warning-btn">⚠️ Warning: Technical Details</a>
+
     </div>
   </div>
 
